# scRNA-seq_data-pipeline

./: Dockerfile  Makefile  README.md  main.py  pyproject.toml
api/: main.py
configs/: default.yaml
data/: test_input.h5ad
src/scpipe/: __init__.py  annotate.py  cli.py  cluster.py  config.py  evaluate.py  integrate.py  io.py  pipeline.py  preprocess.py  qc.py
tests/: conftest.py  test_io.py  test_pipeline.py  test_preprocess.py  test_qc.py
