[project]
name = "scrna-seq-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anndata>=0.10",
  "scanpy>=1.10",
  "pydantic>=2",
  "pyyaml>=6",
  "numpy>=1.26",
  "pandas>=2",
  "scikit-learn>=1.4",
  "leidenalg>=0.10",
  "igraph>=0.11",
]
[project.optional-dependencies]
api = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "python-multipart>=0.0.9",
]
